Giraph Change Log

Release 0.2.0 - unreleased

  GIRAPH-315: giraph-site.xml isn't read on time. (majakabiljo via
  aching)

  GIRAPH-325: One more progress call. (majakabiljo via aching)

  GIRAPH-328: Outgoing messages from current superstep should be
  grouped at the sender by owning worker, not by partition. (Eli
  Reisman via aching)

  GIRAPH-293: Should aggregators be checkpointed? (majakabiljo via
  aching)

  GIRAPH-355: Partition.readFields crashes. (maja via aching)

  GIRAPH-354: Giraph Formats should use hcatalog-core. (nitayj via
  aching)

  GIRAPH-353: Received metrics are not thread-safe (aching via ereisman)

  GIRAPH-326: Writing input splits to ZooKeeper in parallel (maja)

  GIRAPH-335: Add committer information for Maja Kabiljo to pom.xml
  (maja)

  GIRAPH-341: Improved log messages (timing) and upgraded junit to 4.8
  for better tests. (aching)
  
  GIRAPH-352: Loaded vertices don't have their configuration set.
  (aching)
  
  GIRAPH-343: Use published hcatalog jars. (nitayj via aching)

  GIRAPH-338: More Rat Ignores (Nitay Joffe via ereisman)

  GIRAPH-347: GiraphConfiguration broke hcatalog build
  (Nitay Joffe via ereisman)

  GIRAPH-340: Added client/server ExecutionHandlers to Netty to avoid
  and added WrappedAdaptiveReceiveBufferSizePredictorFactory to
  debug/predict the size of the incoming messages. (aching)

  GIRAPH-274: Jobs still failing due to tasks timeout during
  INPUT_SUPERSTEP. (nitayj via aching)

  GIRAPH-337: Make a specific Giraph configuration for Class caching
  and specific Giraph configuration. (aching)

  GIRAPH-334: Bugfix HCatalog Hive profile. (nitayj via aching)

  GIRAPH-93: Hive input / output format. (nitayj via aching)

  GIRAPH-277: Text Vertex Input/Output Format base classes overhaul.
  (nitayj via aching)

  GIRAPH-331: ReviewBoard post-review config. (nitayj via aching)

  GIRAPH-332: Duplicate unnecessary info in giraph-formats-contrib
  compile.xml. (nitay via aching)
