@@ -33,6 +33,10 @@ import org.apache.giraph.graph.partition.PartitionOwner;
 import org.apache.giraph.utils.MemoryUtils;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.io.WritableComparable;
+/*if[HADOOP_NON_INTERVERSIONED_RPC]
+else[HADOOP_NON_INTERVERSIONED_RPC]*/
+import org.apache.hadoop.ipc.ProtocolSignature;
+/*end[HADOOP_NON_INTERVERSIONED_RPC]*/
 import org.apache.hadoop.ipc.RPC;
 import org.apache.hadoop.ipc.RPC.Server;
 import org.apache.hadoop.mapreduce.Mapper;
@@ -59,11 +63,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-
-/*if[HADOOP_NON_INTERVERSIONED_RPC]
-else[HADOOP_NON_INTERVERSIONED_RPC]*/
-import org.apache.hadoop.ipc.ProtocolSignature;
-/*end[HADOOP_NON_INTERVERSIONED_RPC]*/
 
 /**
  * Basic RPC communications object that implements the lower level operations
@@ -237,7 +236,7 @@ public abstract class BasicRPCCommunications<I extends WritableComparable,
     /**
      * Constructor.
      *
-     * @param peerConnection Connection to send the messsages to.
+     * @param peerConnection Connection to send the messages to.
      * @param context Context of the mapper.
      */
     PeerFlushExecutor(PeerConnection peerConnection,
@@ -1301,5 +1300,12 @@ public abstract class BasicRPCCommunications<I extends WritableComparable,
   @Override
   public String getName() {
     return myName;
+  }
+
+  @Override
+  public ServerData<I, V, E, M> getServerData() {
+    throw
+      new IllegalStateException("getServerData() called" +
+      "while using Hadoop RPC: should only be used by Netty RPC.");
   }
 }
