@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-212: Security is busted since GIRAPH-168. (ekoontz via
+  aching)
+
   GIRAPH-315: giraph-site.xml isn't read on time. (majakabiljo via
   aching)
 
